unpackaged/main/default/objects/Section__mdt/Section__mdt.object-meta.xml
<CustomObject>
    <label>Section</label>
    <pluralLabel>Sections</pluralLabel>
</CustomObject>