unpackaged/main/default/objects/Section__mdt/fields/Child_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Section_Name__c</fullName>
    <label>Child Section Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>