unpackaged/main/default/objects/Section__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>