unpackaged/main/default/objects/Section__mdt/fields/Parent_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section_Name__c</fullName>
    <label>Parent Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>