unpackaged/main/default/objects/Section__mdt/fields/Parent_Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section_Order__c</fullName>
    <label>Parent Section Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>