unpackaged/main/default/objects/Section__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Detail</fullName>
            </value>
            <value>
                <fullName>Household Detail</fullName>
            </value>
            <value>
                <fullName>Client - Individual</fullName>
                <default>true</default>
                <label>Client - Individual</label>
            </value>
            <value>
                <fullName>Client - Business</fullName>
            </value>
            <value>
                <fullName>Client - Trust</fullName>
            </value>
            <value>
                <fullName>Authorized Person</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Control Person</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Grantor - Revocable Trust</fullName>
            </value>
            <value>
                <fullName>Grantor - Irrevocable Trust</fullName>
            </value>
            <value>
                <fullName>ISA - Fin Acct</fullName>
            </value>
            <value>
                <fullName>ISA - Service Agreement</fullName>
            </value>
            <value>
                <fullName>AML Documentation</fullName>
            </value>
            <value>
                <fullName>Alternative Investment</fullName>
            </value>
            <value>
                <fullName>Trust Related Party</fullName>
            </value>
            <value>
                <fullName>Business Related Party</fullName>
            </value>
            <value>
                <fullName>ISA - DPI</fullName>
            </value>
            <value>
                <fullName>Client - Irrevocable Trust</fullName>
                <isActive>false</isActive>
                <label>Client - Irrevocable Trust</label>
            </value>
            <value>
                <fullName>Client - Revocable Trust</fullName>
                <isActive>false</isActive>
                <label>Client - Revocable Trust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>