unpackaged/main/default/objects/Section__mdt/listViews/All_with_Fields.listView-meta.xml
<ListView>
    <fullName>All_with_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Type__c</columns>
    <columns>Child_Section_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Parent_Section_Name__c</columns>
    <columns>Parent_Section_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Fields</label>
</ListView>