unpackaged/main/default/objects/Section__mdt/listViews/Alternative_Investment.listView-meta.xml
<ListView>
    <fullName>Alternative_Investment</fullName>
    <columns>MasterLabel</columns>
    <columns>Parent_Section_Name__c</columns>
    <columns>Child_Section_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Parent_Section_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Alternative Investment</value>
    </filters>
    <label>Alternative Investment</label>
</ListView>