unpackaged/main/default/objects/Section__mdt/listViews/Authorized_Person.listView-meta.xml
<ListView>
    <fullName>Authorized_Person</fullName>
    <columns>MasterLabel</columns>
    <columns>Parent_Section_Name__c</columns>
    <columns>Child_Section_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Parent_Section_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Authorized Person</value>
    </filters>
    <label>Authorized Person</label>
</ListView>