unpackaged/main/default/objects/Section__mdt/listViews/Business.listView-meta.xml
<ListView>
    <fullName>Business</fullName>
    <columns>MasterLabel</columns>
    <columns>Parent_Section_Name__c</columns>
    <columns>Child_Section_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Parent_Section_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Client - Business</value>
    </filters>
    <label>Business</label>
</ListView>