unpackaged/main/default/objects/Section__mdt/listViews/Grantor_Revocable_Records.listView-meta.xml
<ListView>
    <fullName>Grantor_Revocable_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>Parent_Section_Name__c</columns>
    <columns>Child_Section_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Parent_Section_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Grantor - Revocable Trust</value>
    </filters>
    <label>Grantor - Revocable Records</label>
</ListView>