unpackaged/main/default/objects/Section__mdt/listViews/ISA_Fin_Acct.listView-meta.xml
<ListView>
    <fullName>ISA_Fin_Acct</fullName>
    <columns>MasterLabel</columns>
    <columns>Parent_Section_Name__c</columns>
    <columns>Child_Section_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Order__c</columns>
    <columns>Parent_Section_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>ISA - Fin Acct</value>
    </filters>
    <label>ISA - Fin Acct</label>
</ListView>